# pi-mesh

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/connectors/: tailscale.md
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
scripts/: add-platform-optional-deps.cjs  sync-npm-version.cjs
src/: index.ts  main.rs  mcp.ts
