[package]
name = "pi-mesh"
version = "0.1.4"
edition = "2021"
authors = ["Victor Aremu <me@victorare.mu>"]
license = "MIT"
repository = "https://github.com/ahkohd/pi-mesh"
description = "P2P mesh for Pi agent sessions"
readme = "README.md"
keywords = ["pi", "agent", "mesh", "p2p"]
categories = ["network-programming"]
exclude = [
    "/.github/",
    "/bin/",
    "/npm/",
    "/scripts/",
    "/package.json",
    "/package-lock.json",
    "/tsconfig.json",
    "src/index.ts",
]

[dependencies]
axum = { version = "0.8", features = ["json", "tokio", "http1"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "process", "sync", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
hostname = "0.4"
